--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 .wayfinding-totem {
@@ -142,6 +142,10 @@
   border-color: var(--accent-color);
 }
 
+.wayfinding-link-active .wayfinding-icon {
+  color: var(--selection-text);
+}
+
 .wayfinding-link-active:hover {
   background: var(--text-primary);
   color: var(--bg-primary);
@@ -149,11 +153,7 @@
 }
 
 .wayfinding-link-active:hover .wayfinding-icon {
-  color: var(--text-primary);
-}
-
-.wayfinding-link-active:hover .wayfinding-icon svg circle {
-  fill: var(--bg-primary);
+  color: var(--text-secondary);
 }
 
 .wayfinding-link-active:hover .wayfinding-label {
